kubernetes/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: sigas
    version: v1
  name: sigas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sigas
      version: v1
  template:
    metadata:
      labels:
        app: sigas
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms15m -Xmx15m -Xmn15m
        name: sigas
        image: sixbell/sigas-cloud:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health          
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health          
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
        securityContext:
          privileged: false
