kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: sigas
  labels:
    app: sigas    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: sigas
