kubernetes/Gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sigas-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sigas-gateway
spec:
  hosts:
  - "*"
  gateways:
  - sigas-gateway
  http:
  - match:
    - uri:
        prefix: /sigas
    #rewrite:
    #  uri: /
    route:
    - destination:
        host: sigas
        port:
          number: 8080
